--- a/TripsFrontEnd/src/app/app.component.html
+++ b/TripsFrontEnd/src/app/app.component.html
@@ -1,4 +1,7 @@
 <app-flight-form></app-flight-form>
+<div class="bg-gray-100 min-h-screen">
+  <app-data-list></app-data-list>
+</div>
 <div class="container">
   <router-outlet></router-outlet>
 </div>
