feat(frontend): model of data (incomplete)

--- a/TripsFrontEnd/src/app/app.component.html
+++ b/TripsFrontEnd/src/app/app.component.html
@@ -1,7 +1,9 @@
 <app-flight-form></app-flight-form>
-<div class="bg-gray-100 min-h-screen">
-  <app-data-list></app-data-list>
+
+<div  class="bg-gray-100 min-h-screen">
+  <app-flight-list></app-flight-list>
 </div>
+
 <div class="container">
   <router-outlet></router-outlet>
 </div>
