--- a/TripsFrontEnd/src/app/flight-form/flight-form.component.html
+++ b/TripsFrontEnd/src/app/flight-form/flight-form.component.html
@@ -8,33 +8,33 @@
           type="text"
           id="origin"
           name="origin"
-          [(ngModel)]="flight.origin"
+          [(ngModel)]="searchFlight.origin"
           #originInput="ngModel"
           class="border rounded w-full p-2"
           [class.border-red-500]="originInput.invalid && originInput.touched"
           minlength="3"
           maxlength="3"
           required
-          (input)="flight.origin = flight.origin.toUpperCase()"
+          (input)="searchFlight.origin = searchFlight.origin.toUpperCase()"
         />
         <div *ngIf="originInput.invalid && originInput.touched" class="text-red-500 text-sm mt-2">
           Origin must be 3 characters.
         </div>
       </div>
       <div class="mb-4">
-        <label for="destination" class="block text-gray-700">Destination</label>
+        <label for="searchFlight.destination" class="block text-gray-700">Destination</label>
         <input
           type="text"
           id="destination"
           name="destination"
-          [(ngModel)]="flight.destination"
+          [(ngModel)]="searchFlight.destination"
           #destinationInput="ngModel"
           class="border rounded w-full p-2"
           [class.border-red-500]="destinationInput.invalid && destinationInput.touched"
           minlength="3"
           maxlength="3"
           required
-          (input)="flight.destination = flight.destination.toUpperCase()"
+          (input)="searchFlight.destination = searchFlight.destination.toUpperCase()"
         />
         <div *ngIf="destinationInput.invalid && destinationInput.touched" class="text-red-500 text-sm mt-2">
           Destination must be 3 characters.
