--- a/TripsFrontEnd/src/app/flight-list/flight-list.component.html
+++ b/TripsFrontEnd/src/app/flight-list/flight-list.component.html
@@ -1,7 +1,7 @@
 
 <div class="container mx-auto">
   <h1 class="table-header">Posibles rutas</h1>
-  <div *ngFor="let flight of exampleData" class="table-row">
+  <div *ngFor="let flight of data" class="table-row">
     <div class="table-cell">
       <div class="text-lg font-semibold">{{ flight.origin }} - {{ flight.destination }}</div>
       <div class="text-gray-600">Price: ${{ flight.price }}</div>
@@ -17,25 +17,3 @@
     </div>
   </div>
 </div>
-
-
-<!-- 
-
-<div class="container mx-auto">
-    <h1 class="text-2xl font-bold mt-4 mb-8">Posibles rutas</h1>
-    <div *ngFor="let flight of exampleData" class="mb-4 p-4 border rounded-lg">
-      <div class="text-lg font-semibold">{{ flight.origin }} - {{ flight.destination }}</div>
-      <div class="text-gray-600">Price: ${{ flight.price }}</div>
-      <div class="mt-2">
-        <h2 class="text-xl font-semibold">Vuelos</h2>
-        <ul>
-          <li *ngFor="let flightDetail of flight.flights">
-            <div>{{ flightDetail.origin }} to {{ flightDetail.destination }}</div>
-            <div>Price: ${{ flightDetail.price }}</div>
-          </li>
-        </ul>
-      </div>
-    </div>
- </div>
-
--->
